<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">
            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign up"
                android:textColor="@color/dark"
                android:textSize="50sp"
                android:fontFamily="sans-serif-light"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp" />

            <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
                android:id="@+id/layout_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:neomorph_background_color="@color/background"
                app:neomorph_corner_radius="10dp"
                app:neomorph_elevation="6dp"
                app:neomorph_highlight_color="@color/highlight"
                app:neomorph_shadow_color="@color/shadow_color"
                app:neomorph_shadow_type="outer"
                app:neomorph_view_type="rectangular">

                <EditText
                    android:id="@+id/input_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shap_rectangle"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

            </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

            <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
                android:id="@+id/layout_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_first_name"
                app:neomorph_background_color="@color/background"
                app:neomorph_corner_radius="10dp"
                app:neomorph_elevation="6dp"
                app:neomorph_highlight_color="@color/highlight"
                app:neomorph_shadow_color="@color/shadow_color"
                app:neomorph_shadow_type="outer"
                app:neomorph_view_type="rectangular">

                <EditText
                    android:id="@+id/input_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shap_rectangle"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

            </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

            <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
                android:id="@+id/layout_gender_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_last_name"
                app:neomorph_background_color="@color/background"
                app:neomorph_corner_radius="10dp"
                app:neomorph_elevation="6dp"
                app:neomorph_highlight_color="@color/highlight"
                app:neomorph_shadow_color="@color/shadow_color"
                app:neomorph_shadow_type="outer"
                app:neomorph_view_type="rectangular">

                <RadioGroup
                    android:id="@+id/radio_gender_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="Female" />

                </RadioGroup>

            </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

            <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
                android:id="@+id/layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_gender_group"
                app:neomorph_background_color="@color/background"
                app:neomorph_corner_radius="10dp"
                app:neomorph_elevation="6dp"
                app:neomorph_highlight_color="@color/highlight"
                app:neomorph_shadow_color="@color/shadow_color"
                app:neomorph_shadow_type="outer"
                app:neomorph_view_type="rectangular">

                <EditText
                    android:id="@+id/input_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/shap_rectangle"
                    android:hint="@string/mobile"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

            <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
                android:id="@+id/layout_country_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_mobile"
                app:neomorph_background_color="@color/background"
                app:neomorph_corner_radius="10dp"
                app:neomorph_elevation="6dp"
                app:neomorph_highlight_color="@color/highlight"
                app:neomorph_shadow_color="@color/shadow_color"
                app:neomorph_shadow_type="outer"
                app:neomorph_view_type="rectangular">

                <Spinner
                    android:id="@+id/country_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_margin="10dp" />

            </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

            <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
                android:id="@+id/layout_state_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_country_spinner"
                app:neomorph_background_color="@color/background"
                app:neomorph_corner_radius="10dp"
                app:neomorph_elevation="6dp"
                app:neomorph_highlight_color="@color/highlight"
                app:neomorph_shadow_color="@color/shadow_color"
                app:neomorph_shadow_type="outer"
                app:neomorph_view_type="rectangular">

                <Spinner
                    android:id="@+id/state_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_margin="10dp" />

            </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

            <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
                android:id="@+id/layout_city_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_state_spinner"
                app:neomorph_background_color="@color/background"
                app:neomorph_corner_radius="10dp"
                app:neomorph_elevation="6dp"
                app:neomorph_highlight_color="@color/highlight"
                app:neomorph_shadow_color="@color/shadow_color"
                app:neomorph_shadow_type="outer"
                app:neomorph_view_type="rectangular">

                <Spinner
                    android:id="@+id/city_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_margin="10dp" />

            </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

            <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_state_spinner"
                app:neomorph_background_color="@color/background"
                app:neomorph_corner_radius="10dp"
                app:neomorph_elevation="6dp"
                app:neomorph_highlight_color="@color/highlight"
                app:neomorph_shadow_color="@color/shadow_color"
                app:neomorph_shadow_type="outer"
                app:neomorph_view_type="rectangular">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/shap_rectangle"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp" />

            </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

            <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_email"
                app:neomorph_background_color="@color/background"
                app:neomorph_corner_radius="10dp"
                app:neomorph_elevation="6dp"
                app:neomorph_highlight_color="@color/highlight"
                app:neomorph_shadow_color="@color/shadow_color"
                app:neomorph_shadow_type="outer"
                app:neomorph_view_type="rectangular">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/shap_rectangle"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textSize="18sp" />

            </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

            <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
                android:id="@+id/layout_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_password"
                app:neomorph_background_color="@color/background"
                app:neomorph_corner_radius="10dp"
                app:neomorph_elevation="6dp"
                app:neomorph_highlight_color="@color/highlight"
                app:neomorph_shadow_color="@color/shadow_color"
                app:neomorph_shadow_type="outer"
                app:neomorph_view_type="rectangular">

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/shap_rectangle"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textSize="18sp" />

            </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

            <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
                android:id="@+id/layout_button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_confirm_password"
                android:layout_marginTop="10dp"
                app:neomorph_background_color="@color/background"
                app:neomorph_corner_radius="10dp"
                app:neomorph_elevation="6dp"
                app:neomorph_highlight_color="@color/highlight"
                app:neomorph_shadow_color="@color/shadow_color"
                app:neomorph_shadow_type="outer"
                android:layout_marginLeft="45dp"
                app:neomorph_view_type="rectangular"
                android:layout_centerHorizontal="true">

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/highlight"
                    android:textSize="17sp" />

            </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>